welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: ')' expected but ';' found.
	if(porteBiscuit() && estSurBiscuit();
                                            ^Balin:9: error: ';' expected but 'while' found.
while(!estSurBiscuit){
^