welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite();
droite();
while(!estFaceMur){
	if(porteBiscuit() && estSurBiscuit();
	{
		avance();
	}
while(!estSurBiscuit){
	avance();
}
prendBiscuit();
poseBiscuit();
while(!estSurBiscuit){
	recule();
}
avance();
poseBiscuit();
}
droite();
avance();
gauche();
avance();